--- a/src/templates/login_form.html
+++ b/src/templates/login_form.html
@@ -4,7 +4,7 @@
 	<title>Login test</title>
     </head>
     <body>
-	<form method="post" action ="/login">
+	<form action ="http://127.0.0.1:8080/report_filter_screen">
 	    <h2>Enter login information</h2>
 	    <input type="text" name="username" placeholder="Username">
 	    <input type="password" name="password" placeholder="Password">
