Screen Flow completed

--- a/src/templates/report_filter_screen.html
+++ b/src/templates/report_filter_screen.html
@@ -1,5 +1,15 @@
 <html>
 	<body><h2>Report Filter Screen</h2>
+		<form action="http://127.0.0.1:8080/facility_inventory_report">
+			<p>Facility Inventory Report
+			<input type="submit" name="Facility Inventory Report" />
+			</p>
+		</form>
+		<form action="http://127.0.0.1:8080/in_transit_report">
+			<p>In Transit Report
+			<input type="submit" name="In Transit Report"/>
+			</p>
+		</form>
 
 	</body>
 </html>
