--- a/src/templates/report_filter_screen.html
+++ b/src/templates/report_filter_screen.html
@@ -10,6 +10,10 @@
 			<input type="submit" name="In Transit Report"/>
 			</p>
 		</form>
+		<form action="http://127.0.0.1:8080/logout">
+			<input type="submit" value="logout": />
 
+		</form>
 	</body>
+
 </html>
