--- a/src/templates/facility_inventory_report.html
+++ b/src/templates/facility_inventory_report.html
@@ -1,5 +1,6 @@
 <html>
 	<body><h2>Facility_inventory_report</h2>
+		<p>tables {{session.result}}</p>
 		<form action="http://127.0.0.1:8080/logout">
 			<input type="submit" value="logout": />
 		</form>
