--- a/src/templates/facility_inventory_report.html
+++ b/src/templates/facility_inventory_report.html
@@ -1,6 +1,24 @@
+<!DOCTYPE html>
 <html>
+<head>
+<style>
+table, th, td{
+	boarder: 1px solid black;
+}
+</style>
+</head>
 	<body><h2>Facility_inventory_report</h2>
-		<p>tables {{session.result}}</p>
+		<table style = "width:100%">
+			{% for entry in session.result %}
+			<tr>
+				<th>{{ entry.column_name1 }}</th>
+				<td>{{ entry.column_name2 }}</td>
+				<td>{{ entry.column_name3 }}</td>
+				<td>{{ entry.column_name4 }}</td>
+				<td>{{ entry.column_name5 }}</td>
+			</tr>
+			{% endfor %}
+		</table>
 		<form action="http://127.0.0.1:8080/logout">
 			<input type="submit" value="logout": />
 		</form>
