--- a/src/templates/logout.html
+++ b/src/templates/logout.html
@@ -1,6 +1,10 @@
 <html>
-	<body><h2>Logout</h2>Successfully logged out.
+	<head><title>LOGOUT</title></head>
+	<body><h1>LOGOUT</h1>
+		<body style="background:#E7DFE7">
+		<p> Successfully logged out. </p>
 		<form action="http://127.0.0.1:8080/">
+			<p> back to login screen </p>
 			<input type="submit" value="login screen"/>
 		</form>
 	</body>
