--- a/src/templates/create_user.html
+++ b/src/templates/create_user.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html lang = "en">
-	<head>
-		<title>Create user</title>
-	</head>
+   <head><title>Create user</title></head>
 	<body>
-	    <div class="container-full-left">
-		<form action ="http://127.0.0.1:8080/create_user_id">
-		<div class ="row">
-			<div class = "col-lg-12">
-				<h1>create user</h1>
-				<p class="lead"> Please create an account</p>
-			</div>
-		</div>
-
-		<div class ="row">
-			<div class = "col-lg-12">
-				<input type="text" name="username" placeholder="Username">
-				<input type="password" name="password" placeholder="Password">
-				<button type="submit">Create</button>
-			</div>
-		</div>
-		</form>
-
-		<form action ="http://127.0.0.1:8080/">
+	<body style="background:#F17B7B">
+		<h1>Create account</h1>
+		<p class="lead"> Enter the username and the password! </p>
+		<FORM action="{{url_for('create_user')}}" method="POST">
+			<TABLE>
+				<TR><TD>Username:</TD><TD><INPUT TYPE="TEXT" NAME="username"/></TD></TR>
+				<TR><TD>Password:</TD><TD><INPUT TYPE="PASSWORD" NAME="password"/></TD></TR>
+			</TABLE>
+			<INPUT TYPE="SUBMIT" value="create" />
+		</FORM>
+		<FORM action ="http://127.0.0.1:8080/">
+			<p> If you already have account or don't want to create one</p>
 			<input type="submit" value="back to login screen"/>
-		</form>
+		</FORM>
 	</body>
 </html>
