--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Dashboard</title>
-		<style>
-		p{
-			text-align:left;
-			color: gray;
-			font-size: 30px;
-		}
-		</style>
-	</head>
-	<body>
-	    <div class="container-full-left">
-		<div class="row">
-			<div class="col-lg-12">
-			<h1> Hello, {{username}}!</h1>
-			</div>
-		</div>
-		<p id = "username"> ID </p>
-		<form action="http://127.0.0.1:8080/logout">
-			<input type="submit" value = "logout": />
-		</form>
-	</body>
-</html>
+<HTML>
+	<HEAD><TITLE>DASHBOARD</TITLE></HEAD>
+	<BODY>
+		<body style="background:#D510CB">
+		<span style="color:#FFFFFF">
+		<H1>Hello, {{username}}</H1>
+		<p>if you want to logout</p>
+		<FORM action = "http://127.0.0.1:8080/logout">
+			<INPUT type ="submit" value ="logout":/>
+		</FORM>
+	</BODY>
+</HTML>
