--- a/src/templates/create_user.html
+++ b/src/templates/create_user.html
@@ -10,9 +10,9 @@
 				<TR><TD>Username:</TD><TD><INPUT TYPE="TEXT" NAME="username"/></TD></TR>
 				<TR><TD>Password:</TD><TD><INPUT TYPE="PASSWORD" NAME="password"/></TD></TR>
 				<TR><TD>Role:</TD><TD>
-				<select name="role" value="{{request.form.role}}">
-					<option value="logistics_officer" name="logistics_officer">Logistics Officer</option>
-					<option value="facilities_officer" name="facilities_officer">Facilities Officer</option>
+				<select name="role">
+					<option value="Logistics Officer"> Logistics Officer</option>
+					<option value="Facilities Officer"> Facilities Officer</option>
 				</select></TD></TR>
 			</TABLE>
 			<INPUT TYPE="SUBMIT" value="create" />
