--- a/src/templates/create_user.html
+++ b/src/templates/create_user.html
@@ -11,7 +11,7 @@
 		<div class="form-group">
 			<label for="username" class="col-lg-2 control-label">Username</label>
 			<div class="col-lg-2">
-				<input type="text" class="form-control" placeholder="USERNAME" name="name" value="{{request.form.name}}">
+				<input type="text" class="form-control" placeholder="USERNAME" name="username" value="{{request.form.username}}">
 			</div>
 		</div>
 
@@ -35,11 +35,24 @@
 		<div class="form-group">
 			<div class="col-lg-10 col-lg-offset-2">
 				<input class="btn btn-default" type="submit" value="Create User">
+				<button onclick="myFunction()">Pop up</button>
 			</div>
 		</div>
 	</fieldset>
 </form>
 
+
+<script>
+function myFunction() {
+	var x; 
+	if(confirm("Are you sure you want to create user?") == true){
+		x = "You pressed OK!";
+	} else {
+		x = "You pressed Cancel!";
+	}
+	document.getElementById("demo").innerHTML = x;
+}
+</script>
 
 
 {{error}}
