--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -4,10 +4,16 @@
 
 
 <br>
-<h2>Login Here</h2>
+<h2>Enter information</h2>
 <form action="" class="form-inline" method="POST">
-	<input type="text" class="form-control" placeholder="USERNAME" name="username" value="{{request.form.username}}">
-	<input type="password" class="form-control" placeholder="PASSWORD" name="password" value="{{request.form.password}}">
+   <div class="form-group">
+	<label for="username">USERNAME</label>
+	<input type="text" class="form-control" name="username" value="{{request.form.username}}">
+   </div>
+   <div class="form-group">
+	<label for="password">PASSWORD</label>
+	<input type="password" class="form-control" name="password" value="{{request.form.password}}">
+   </div>
 	<input class="btn btn-default" type="submit" value="Login">
 
 </form>
