--- a/src/templates/menu_bar.html
+++ b/src/templates/menu_bar.html
@@ -21,7 +21,7 @@
 
 			{% if session.logged_in %}
 			<div class="jumbotron">
-				<h2>LOGGED IN AS</h2>
+				<h2>LOGGED IN</h2>
 				<p>{{username}}</p>
 				<p><a class="btn btn-primary btn-lg">More Information</a></p>
 			</div>
