--- a/src/templates/dispose_asset.html
+++ b/src/templates/dispose_asset.html
@@ -3,23 +3,38 @@
 {% block body %}
 
 
-
-
-
-<br>
-{% for asset in assets %}
-	<h3>{{asset}}</h3>
-{% endfor %}
-<br>
-
-<br>
-<h2>Dispose Asset</h2>
-<form action="" class="form-inline" method="POST">
-	<input type="text" class="form-control" placeholder="asset tag" name="asset_tag" value="{{request.form.asset_tag}}">
-	<input type="date" class="form-control" placeholder="date" name="date" value="{{request.form.date}}">
-	<input class="btn btn-default" type="submit" value="Login">
+<form class="form-horizontal">
+	<fieldset>
+		<legend>EXISTING DISPOSE ASSET</legend>
+		{% for asset in assets %}
+		<h3>{{asset}}</h3>
+		{% endfor %}
+	</fieldset>
 </form>
 
+
+<form action="" class="form-horizontal" method="POST">
+	<fieldset>
+		<legend>DISPOSE ASSET</legend>
+		<div class="form-group">
+			<label for="asset_tag" class="col-lg-2 control-label">ASSET TAG</label>
+			<div class="col-lg-2">
+				<input type="text" class="form-control"  placeholder="TAG"  name="asset_tag" value="{{request.form.asset_tag}}">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="date" class="col-lg-2 control-label">DATE</label>
+			<div class="col-lg-2">
+				<input type="date" class="form-control" placeholder="DATE" name="date" value="{{request.form.date}}">
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-lg-10 col-lg-offset-2">
+				<input class="btn btn-default" type="submit" value="add">
+			</div>
+		</div>
+	</fieldset>
+</form>
 
 {{error}}
 {% endblock %}
