--- a/src/templates/transfer_req.html
+++ b/src/templates/transfer_req.html
@@ -1,24 +1,43 @@
 {% extends "menu_bar.html" %}
 
 {% endfor %}
-<br>
-<h2>Transfer Asset Request:</h2>
-<form action="" class="form-inline" method="POST">
-	<input type="text" class="form-control" placeholder="asset tag" name="asset_tag" value="{{request.form.asset_tag}}">
-	<select name="source" value="{{request.form.source}}">
-		{% for facility in facilities %}
-		<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
-		{% endfor %}
-	</select><select name="destination" value="{{request.form.destination}}">
-		{% for facility in facilities %}
-		<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
-		{% endfor %}
-	</select>
-	<input type="date" class="form-control" placeholder="date" name="date" value="{{request.form.date}}">
 
-
-	<input class="btn btn-default" type="submit" value="add">
-
+<form action="" class="form-horizontal" method="POST">
+	<fieldset>
+		<legend>TRANSFER ASSET</legend>
+		<div class="form-group">
+			<label for="asset_tag" class="col-lg-2 control-label">ASSET TAG</label>
+			<div class="col-lg-2">	
+				<input type="text" class="form-control" placeholder="ASSET TAG" name="asset_tag" value="{{request.form.asset_tag}}">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="facility" class="col-lg-2 control-label">SOURCE</label>
+			<div class="col-lg-2">
+				<select class="form-control"  name="source" value="{{request.form.source}}">
+				{% for facility in facilities %}
+					<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
+				{% endfor %}
+				</select>
+				<select class="form-control"  name="destination" value="{{request.form.destination}}">
+				{% for facility in facilities %}
+					<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
+				{% endfor %}
+				</select>
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="date" class="col-lg-2 control-label">DATE</label>
+			<div class="col-lg-2">
+				<input type="date" class="form-control" placeholder="date" name="date" value="{{request.form.date}}">
+			</div>
+		</div>
+		<div class="form-group">
+			<div class="col-lg-10 col-lg-offset-2">
+				<input class="btn btn-default" type="submit" value="add">
+			</div>
+		</div>	
+	</fieldset>
 </form>
 
 {{error}}
