fixing on the errors

--- a/src/templates/create_user.html
+++ b/src/templates/create_user.html
@@ -25,9 +25,9 @@
 		<div class="form-group">
 			<label class="col-lg-2 control-label">Role</label>
 			<div class="col-lg-2">
-				<select name="role" value="{{request.form.role}}">
-					<option value="logistics_officer" name="logistics_officer">Logistics Officer</option>
-					<option value="facilities_officer" name="facilities_officer">Facilities Officer</option>
+				<select name="role">
+					<option value="Logistics Officer">Logistics Officer</option>
+					<option value="Facilities Officer">Facilities Officer</option>
 				</select>
 			</div>
 		</div>
