--- a/src/templates/add_asset.html
+++ b/src/templates/add_asset.html
@@ -20,21 +20,21 @@
 		<div class="form-group">
 			<label for="asset_tag" class="col-lg-2 control-label">ASSET TAG</label>
 			<div class="col-lg-2">
-				<input type="text" class="form-control"  placeholder="TAG"  name="asset_tag" value="{{request.form.asset_tag}}">
+				<input type="text" class="form-control"  placeholder="TAG"  name="asset_tag">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="description" class="col-lg-2 control-label">DESCRIPTION</label>
 			<div class="col-lg-2">
-				<input type="text" class="form-control"  placeholder="DESCRIPTION"  name="description" value="{{request.form.description}}">
+				<input type="text" class="form-control"  placeholder="DESCRIPTION"  name="description">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="facility" class="col-lg-2 control-label">FACILITY</label>
 			<div class="col-lg-2">
-				<select class="form-control" name="facility" value="{{request.form.facility}}">
+				<select class="form-control" name="facility">
 					{% for facility in facilities %}
-						<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
+						<option value="{{facility[0]}}">{{facility[0]}}</option>
 					{% endfor %}
 				</select>
 			</div>
@@ -42,7 +42,7 @@
 		<div class="form-group">
 			<label for="date" class="col-lg-2 control-label">DATE</label>
 			<div class="col-lg-2">
-				<input type="date" class="form-control" placeholder="date" name="date" value="{{request.form.date}}">
+				<input type="date" class="form-control" placeholder="date" name="date">
 			</div>
 		</div>
 		<div class="form-group">
