--- a/src/templates/approve_req.html
+++ b/src/templates/approve_req.html
@@ -1,9 +1,9 @@
-{% extends "menu_bar.html" %}
+{% extends "menu_bar.html" %} 
 
-{% block body %}
+{% block body %} 
 
 <br>
-<h2>Approve Request:</h2>
+<h2>Approve Request</h2>
 
 <table class="table table-condenesed">
 	<tr>
@@ -12,7 +12,7 @@
 		<th>Source</th>
 		<th>Destination</th>
 		<th>Asset ID</th>
-		<tr>
+	</tr>
 {% for request in requests %}
 	<tr>
 		<td>{{request[0]}}</td>
@@ -22,13 +22,17 @@
 		<td>{{request[4]}}</td>
 		<form action="" method="POST" class="form-inline">
 			<input type="hidden" name="request_pk" value="{{request[0]}}">
-			<td><input type="submit" value="Approve" class="btn btn-success" name="approval"><td>
-		<td><input type="submit" value="Deny" class="btn btn-danger" name="deny"><td>
+			<td><input type="submit" value="Approve" class="btn btn-success" name="approval"></td>
+		<td><input type="submit" value="Deny" class="btn btn-danger" name="deny"></td>
 		</form>
-		<tr>
+	</tr>
 {% endfor %}
-<table>
+</table>
 
 {{error}}
 
 {% endblock %}
+
+
+
+
