--- a/src/templates/add_asset.html
+++ b/src/templates/add_asset.html
@@ -6,7 +6,7 @@
 	<fieldset>
 		<legend>EXISTING ASSETS</legend>
 		{% for asset in assets %}
-		<td><h3>{{asset[0]}}</h3></td>
+		<td><p>{{asset[0]}}</p></td>
 		{% endfor %}
 	</fieldset>
 </form>
