--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -8,8 +8,7 @@
 <h1>DASHBOARD</h1>
 
 <div class="alert alert-dismissible alert-success">
-	<button type="button" class="close" data-dismiss="alert">&times;</button>
-	<strong>Welcome!</strong> You successfully logged in <a href="#" class="alert-link">{{username}}</a>.
+	<strong>Welcome!</strong> You successfully logged in {{session.username}}</a>
 </div>
 
 {% endblock %}
