--- a/src/templates/menu_bar.html
+++ b/src/templates/menu_bar.html
@@ -25,11 +25,17 @@
 			</ul>
 
 			{% if session.logged_in %}
-			<div class="jumbotron">
-				<h2>LOGGED IN AS</h2>
-				<p>{{session.username}}</p>
-				<p><a class="btn btn-primary btn-lg">More Information</a></p>
+			
+			<div class="panel panel-primary">
+				<div class="panel-heading">
+					<h3 class="panel-title">LOGGED IN</h3>
+				</div>
+				<div class="panel-body">
+					<p>ID: {{session.username}}</p>
+					<p>ROLE: {{session.role}}</p>
+				</div>
 			</div>
+			
 			{% endif %}
 
 			{% with messages = get_flashed_messages() %}
