--- a/src/templates/create_user.html
+++ b/src/templates/create_user.html
@@ -11,21 +11,21 @@
 		<div class="form-group">
 			<label for="username" class="col-lg-2 control-label">Username</label>
 			<div class="col-lg-2">
-				<input type="text" class="form-control" placeholder="USERNAME" name="username" value="{{request.form.username}}">
+				<input type="text" class="form-control" placeholder="USERNAME" name="username">
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label for="username" class="col-lg-2 control-label">Password</label>
 			<div class="col-lg-2">
-				<input type="password" class="form-control" placeholder="PASSWORD" name="password" value="{{request.form.password}}">
+				<input type="password" class="form-control" placeholder="PASSWORD" name="password">
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label class="col-lg-2 control-label">Role</label>
 			<div class="col-lg-2">
-				<select name="role">
+				<select name="rolename">
 					<option value="Logistics Officer">Logistics Officer</option>
 					<option value="Facilities Officer">Facilities Officer</option>
 				</select>
@@ -34,7 +34,7 @@
 
 		<div class="form-group">
 			<div class="col-lg-10 col-lg-offset-2">
-				<input class="btn btn-default" type="submit" value="Create User">
+				<input class="btn btn-primary" type="submit" value="Create User">
 			</div>
 		</div>
 	</fieldset>
