--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -8,7 +8,7 @@
 <h1>DASHBOARD</h1>
 
 <div class="alert alert-dismissible alert-success">
-	<strong>Welcome!</strong> You successfully logged in {{session.username}}</a>
+	<strong>Welcome!</strong> {{session.username}}</a>
 </div>
 
 {% endblock %}
