--- a/src/templates/transfer_req.html
+++ b/src/templates/transfer_req.html
@@ -1,23 +1,33 @@
 {% extends "menu_bar.html" %}
 
-<form action="" class="form-horizontal" method="POST">
+{% block body %}
+
+<form class="form-horizontal" method="POST">
 	<fieldset>
 		<legend>TRANSFER ASSET</legend>
+		<p>- User input should be checked for validity</p>
+		<p>- Check asset tag exist </p>
+		<p>- Check source and destination facilities exists</p>
 		<div class="form-group">
 			<label for="asset_tag" class="col-lg-2 control-label">ASSET TAG</label>
 			<div class="col-lg-2">	
-				<input type="text" class="form-control" placeholder="ASSET TAG" name="asset_tag">
+				<input type="text" class="form-control" placeholder="REQUIRED" name="asset_tag">
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="facility" class="col-lg-2 control-label">SOURCE</label>
 			<div class="col-lg-2">
-				<select class="form-control"  name="source" value="{{request.form.source}}">
+				<select class="form-control"  name="source">
 				{% for facility in facilities %}
 					<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
 				{% endfor %}
 				</select>
-				<select class="form-control"  name="destination" value="{{request.form.destination}}">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="facility" class="col-lg-2 control-label">DESTINATION</label>
+			<div class="col-lg-2">
+				<select class="form-control"  name="destination">
 				{% for facility in facilities %}
 					<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
 				{% endfor %}
@@ -27,15 +37,42 @@
 		<div class="form-group">
 			<label for="date" class="col-lg-2 control-label">DATE</label>
 			<div class="col-lg-2">
-				<input type="date" class="form-control" placeholder="date" name="date" value="{{request.form.date}}">
+				<input type="date" class="form-control" placeholder="date" name="date">
 			</div>
 		</div>
 		<div class="form-group">
 			<div class="col-lg-10 col-lg-offset-2">
-				<input class="btn btn-default" type="submit" value="add">
+				<input class="btn btn-primary" type="submit" value="GENERATE">
 			</div>
 		</div>	
 	</fieldset>
 </form>
 
+
+
+<form class="form-horizontal">
+	<fieldset>
+		<legend>TRANSFER REPORT</legend>
+		<p>List</p>
+		<table class="table table-striped table-hover ">
+			<thead>	
+				<tr><th><b>ASSET TAG</b></th><th><b>LOAD TIME</b></th><th><b>UNLOAD TIME</b></th></tr>
+			</thead>
+			<tbody>	   
+				{% for asset in assets %}
+				<tr>
+					<th> {{ asset[0] }} </th>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+	</fieldset>
+</form>
+
+
+
+
+
+
 {{error}}
+{% endblock %}
