--- a/src/templates/update_transit.html
+++ b/src/templates/update_transit.html
@@ -2,18 +2,17 @@
 
 {% block body %}
 
-<br>
 <h2>Update Transit:</h2>
 
-<form action="" method="POST" class="form-inline">
+<form method="POST" class="form-inline">
 	<select name="transit_pk" value="{{request.form.transit_pk}}">
 		{% for item in transit %}
 		<option value={{item[0]}} name={{item[0]}}>{{item[0]}}</option>
 		{% endfor %}
 	</select>
-	<input type="date" class="form-control" placeholder="load" name="load" value="{{request.form.load}}">
-	<input type="date" class="form-control" placeholder="unload" name="unload" value="{{request.form.unload}}">
-	<input type="submit" value="Submit" class="btn" name="submit">
+	<input type="date" class="form-control" placeholder="load" name="load">
+	<input type="date" class="form-control" placeholder="unload" name="unload">
+	<input class="btn btn-primary" type="submit" name="submit">
 </form>
 
 {{error}}
