--- a/src/templates/transfer_req.html
+++ b/src/templates/transfer_req.html
@@ -2,6 +2,8 @@
 
 {% block body %}
 
+{% if session.role == "Logistics Officer" %}
+
 <form class="form-horizontal" method="POST">
 	<fieldset>
 		<legend>TRANSFER ASSET</legend>
@@ -69,9 +71,12 @@
 	</fieldset>
 </form>
 
+{% else %}
+
+<p> ERROR </p>
 
 
-
+{% endif %}
 
 
 {{error}}
