--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -14,7 +14,7 @@
 		<label for="password">PASSWORD</label>
 		<input type="password" class="form-control" name="password" value="{{request.form.password}}">
 	</div>
-	<input class="btn btn-default" type="submit" value="Login">
+	<input class="btn btn-primary" type="submit" value="Login">
 
 </form>
 
