--- a/src/templates/menu_bar.html
+++ b/src/templates/menu_bar.html
@@ -12,7 +12,7 @@
 			<li><a href="{{ url_for('transfer_req') }}">Transfer REQUEST</a></li>
 			<li><a href="{{ url_for('approve_req') }}">Approve REQUEST</a></li>
 			<li><a href="{{ url_for('update_transit') }}">Transfer UPDATE</a></li>
-			<li><a href="{{ url_for('asset_report') }}">REPORT screen</a></li>
+			<li><a href="{{ url_for('asset_report') }}">ASSET report</a></li>
 				<ul class="nav navbar-nav navbar-right">
 					<form action="{{url_for('logout')}}" method="GET"><button class="btn btn-danger navbar-btn" href="{{url_for('logout')}}">LOG OUT</button></form>
 				</ul>
