ERRORS NEED to be FIXED

--- a/src/templates/asset_report.html
+++ b/src/templates/asset_report.html
@@ -40,8 +40,10 @@
 		<table class="table table-striped table-hover ">
 			<thead>	
 				<tr><th><b>ASSET TAG</b></th>
+				<th><b>DESCRIPTION</b></th>
 				<th><b>FACILITY</b></th>
-				<th><b>ARRIVE DATE</b></th></tr>
+				<th><b>ARRIVE DATE</b></th>
+				<th><b>DEPARTURE DATE</b></th></tr>
 			</thead>
 			<tbody>	
 				{% for data in session.data %}
