--- a/src/templates/asset_report.html
+++ b/src/templates/asset_report.html
@@ -51,6 +51,7 @@
 					<td>{{ data[0] }}</td>
 					<td>{{ data[1] }}</td>
 					<td>{{ data[2] }}</td>
+					<td>{{ data[3] }}</td>
 				<tr>
 				{% endfor %}
 			</tbody>
