--- a/src/templates/menu_bar.html
+++ b/src/templates/menu_bar.html
@@ -10,7 +10,7 @@
 			<li><a href="{{ url_for('add_asset') }}">ASSET add</a></li>
 			<li><a href="{{ url_for('dispose_asset') }}">ASSET dispose</a></li>
 			<li><a href="{{ url_for('transfer_req') }}">TRANSFER request</a></li>
-			<li><a href="{{ url_for('approve_req') }}">APPROVE requesst</a></li>
+			<li><a href="{{ url_for('approve_req') }}">APPROVE request</a></li>
 			<li><a href="{{ url_for('update_transit') }}">TRANSFER update</a></li>
 			<li><a href="{{ url_for('asset_report') }}">ASSET report</a></li>
 				<ul class="nav navbar-nav navbar-right">
