going over from the beginning

--- a/src/templates/add_facility.html
+++ b/src/templates/add_facility.html
@@ -12,15 +12,15 @@
 		<p>- Facility name or code should not match from record </p>
 		<p>- New facility record should be inserted into the database with the information from the form</p>
 		<div class="form-group">
-			<label for="common_name" class="col-lg-2 control-label">FACILITY NAME</label>
-			<div class="col-lg-2">
-				<input type="text" class="form-control" placeholder="REQUIRED" name="common_name">
-			</div>
-		</div>
-		<div class="form-group">
 			<label for="fcode" class="col-lg-2 control-label">FACILITY CODE</label>
 			<div class="col-lg-2">
 				<input type="text" class="form-control" placeholder="REQUIRED" name="fcode">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="common_name" class="col-lg-2 control-label">FACILITY NAME</label>
+			<div class="col-lg-2">
+				<input type="text" class="form-control" placeholder="REQUIRED" name="common_name">
 			</div>
 		</div>
 		<input class="btn btn-primary" type="submit" value="ADD">
@@ -34,13 +34,13 @@
 			<p>List all of the facilities currently in the database</p>
 			<table class="table table-striped table-hover ">
 			   <thead>	
-				<tr><th><b>FACILITY NAME</b></th><th><b>FACILITY CODE</b></th></tr>
+				<tr><th><b>FACILITY CODE</b></th><th><b>FACILITY NAME</b></th></tr>
 			   </thead>
 		   	   <tbody>	   
 				{% for facility in session.facilities %}
 					<tr>
-						<th> {{ facility[2] }} </th>
 						<th> {{ facility[1] }} </th>
+						<th> {{ facility[2] }} </th>
 					</tr>
 				{% endfor %}
 			   </tbody>
