--- a/src/templates/asset_report.html
+++ b/src/templates/asset_report.html
@@ -12,9 +12,9 @@
 		<div class="form-group">
 			<label for="facility" class="col-lg-2 control-label">FACILITY NAME</label>
 			<div class="col-lg-2">
-				<select class="form-control">
+				<select class="form-control" name="facility">
 					{% for facility in session.facilities %}
-					<option value={{facility[0]}}>{{facility[0]}}</option>
+					<option value= " {{facility[0]}} ">{{facility[0]}}</option>
 					{% endfor %}
 				</select>
 			</div>
