chaged the button name to DISPLAY

--- a/src/templates/dispose_asset.html
+++ b/src/templates/dispose_asset.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="form-group">
 			<div class="col-lg-10 col-lg-offset-2">
-				<input class="btn btn-primary" type="submit" value="add">
+				<input class="btn btn-primary" type="submit" value="DISPOSE">
 			</div>
 		</div>
 	</fieldset>
