Trying to complete the asset tranist process

--- a/src/templates/transfer_req.html
+++ b/src/templates/transfer_req.html
@@ -21,7 +21,7 @@
 			<div class="col-lg-2">
 				<select class="form-control"  name="source">
 				{% for facility in facilities %}
-					<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
+					<option value={{facility[0]}}>{{facility[0]}}</option>
 				{% endfor %}
 				</select>
 			</div>
@@ -31,7 +31,7 @@
 			<div class="col-lg-2">
 				<select class="form-control"  name="destination">
 				{% for facility in facilities %}
-					<option value={{facility[0]}} name={{facility[0]}}>{{facility[0]}}</option>
+					<option value={{facility[0]}}>{{facility[0]}}</option>
 				{% endfor %}
 				</select>
 			</div>
