--- a/src/templates/approve_req.html
+++ b/src/templates/approve_req.html
@@ -4,28 +4,33 @@
 
 <h2>Approve Request</h2>
 
-<table class="table table-condenesed">
-	<tr>
-		<th>Requester ID</th>
-		<th>Request Date</th>
-		<th>Source</th>
-		<th>Destination</th>
-		<th>Asset ID</th>
-	</tr>
-{% for request in requests %}
-	<tr>
-		<td>{{request[0]}}</td>
-		<td>{{request[1]}}</td>
-		<td>{{request[2]}}</td>
-		<td>{{request[3]}}</td>
-		<td>{{request[4]}}</td>
-		<form action="" method="POST" class="form-inline">
-			<td><input type="submit" value="Approve" class="btn btn-success" name="approval"></td>
-		<td><input type="submit" value="Deny" class="btn btn-danger" name="deny"></td>
-		</form>
-	</tr>
-{% endfor %}
-</table>
+
+<form class="form-horizontal">
+	<fieldset>
+		<legend>APPROVE/DELETE REQUEST</legend>
+		<p>Only Facility Officer can approve or delete</p>
+		<table class="table table-striped table-hover ">
+			<thead>	
+				<tr><th><b>REQUESTER ID</b></th><th><b>REQUEST DATE</b></th><th><b>SOURCE</b></th><th><b>DESTINATION</b></th><th><b>ASSET ID</b></th></tr>
+			</thead>
+			<tbody>	   
+				{% for request in requests %}
+				<tr>
+					<th> {{ request[0] }} </th>
+					<th> {{ request[1] }} </th>
+					<th> {{ request[2] }} </th>
+					<th> {{ request[3] }} </th>
+					<th> {{ request[4] }} </th>
+				</tr>
+				{% endfor %}
+			</tbody>
+		</table>
+		<input class="btn btn-primary" type="submit" value="APPROVE">
+		<input class="btn btn-primary" type="submit" value="DELETE">
+	</fieldset>
+</form>
+
+
 
 {{error}}
 
