fixed the transfer_req part

--- a/src/templates/transfer_req.html
+++ b/src/templates/transfer_req.html
@@ -13,7 +13,7 @@
 		<div class="form-group">
 			<label for="asset_tag" class="col-lg-2 control-label">ASSET TAG</label>
 			<div class="col-lg-2">
-				<select class="form-control" name="asset tag">
+				<select class="form-control" name="asset_tag">
 				{% for asset in session.assets %}
 					<option value={{asset[0]}}>{{asset[0]}}</option>
 				{% endfor %}
